--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
+/.idea/gradle.xml
+/.idea/inspectionProfiles/
+/.idea/vcs.xml
 .DS_Store
 /build
 /captures
